--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "RNTypescriptBoilerplate",
-  "displayName": "RNTypescriptBoilerplate"
+  "name": "react-native-boilerplate",
+  "displayName": "react-native-boilerplate"
 }
